Can schedule transactions and edit saved transactions also * added npm build integration into the Spring Boot build

--- a/src/main/app/src/scenes/Parents/AccountDetail/Transactions.css
+++ b/src/main/app/src/scenes/Parents/AccountDetail/Transactions.css
@@ -11,7 +11,7 @@
     order: 1;
 }
 
-.Transactions .navigate > .reload {
+.Transactions .navigate > .actions {
     order: 0;
     flex-grow: 1;
     text-align: left;
