Added intro message and app footer

--- a/src/main/app/src/App.css
+++ b/src/main/app/src/App.css
@@ -1,3 +1,11 @@
 .App {
     --scene-margin: 10px;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
+
+.App > main {
+    flex-grow: 1;
+}
+
