Kids can see their transactions

--- a/src/main/app/src/scenes/Kids/index.css
+++ b/src/main/app/src/scenes/Kids/index.css
@@ -14,5 +14,11 @@
 }
 
 .Kids .balanceContainer {
-    text-align: center;
+}
+
+.Kids .content {
+    margin: 0 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
